# hurr-ai-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: ai_clients.py  config.py  database.py  main.py  models.py
app/routes/: history.py  images.py  search.py  upload.py
app/templates/: index.html
